Correct display page header on mobile devices

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -70,7 +70,7 @@ html {
 }
 
 .page-header {
-    height: calc(100vh - 6.5vh);
+    height: 92vh;
     background-image: url("../assets/images/page-header-home.jpg");
     background-attachment: fixed;
     background-size: cover;
