--- a/app/scss/partials/_page-header.scss
+++ b/app/scss/partials/_page-header.scss
@@ -7,7 +7,7 @@
             font-weight: 700;
             letter-spacing: 1px;
             line-height: 100%;
-            margin-top: 2em;
+//            margin-top: 2em;
             word-wrap: break-word;
 
             @media (max-width: 768px) {
